[CSS] Fixed margin of headers. Fixed visibility of Skills section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@ body {
             background-color: aliceblue;
 
             h1 {
+                margin: 0;
                 text-align: center;
                 font-size: 3.0em;
             }
@@ -213,7 +214,12 @@ body {
 
             
             h1 {
-                color: lightskyblue;
+                text-shadow:    
+                -3px -3px 0 black,  
+                 3px -3px 0 black,
+                -3px  3px 0 black,
+                 3px  3px 0 black;
+                color: greenyellow;
             }
             
             div#skills_container {
